Add colors and fonts to style, some reorganizing of index

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <div class="top">
         <h1>This website is awesome</h1>
-        <p>This website has the bestest of everything ever. Like for reals. You should totally check it out and sheet. Oh, also remember to share it with all of your friends and stuff</p>
+        <p class="top-text">This website has the bestest of everything ever. Like for reals. You should totally check it out and sheet. Oh, also remember to share it with all of your friends and stuff</p>
         <button>Sign up</button>
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
 
     <div class="middle">
-        <h1>Cool Info About Things</h1>
+        <h2 class="info-header">Cool Info About Things</h2>
         <div class="img-holder"></div>
         this is why we are oh so awesome and kewl and what you can look forward to with us.
         <div class="img-holder"></div>
