Style header and top, get borders over empty space

--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="header-links">
-            <ul>
-                <li>Header Link One</li>
-                <li>Header Link Two</li>
-                <li>Header Link Three</li>
-            </ul>
+    <div class="hero">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="header-links">
+                <ul>
+                    <li>Header Link One</li>
+                    <li>Header Link Two</li>
+                    <li>Header Link Three</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="top">
-        <h1>This website is awesome</h1>
-        <p class="top-text">This website has the bestest of everything ever. Like for reals. You should totally check it out and sheet. Oh, also remember to share it with all of your friends and stuff</p>
-        <button>Sign up</button>
-        <div class="placeholder">this is a placeholder for an image</div>
+        <div class="top">
+            <div class="top-left">
+                <h1>This website is awesome</h1>
+                <p class="top-text top-content">This website has the bestest of everything ever. Like for reals. You should totally check it out and sheet. Oh, also remember to share it with all of your friends and stuff</p>
+                <button class="button-top">Sign up</button>
+            </div>
+            <div class="top-right">
+                <div class="placeholder top-text">this is a placeholder for an image</div>
+            </div>
+        </div>
     </div>
 
     <div class="middle">
@@ -55,5 +61,6 @@
     <div class="footer">
         Copyright? More like Copyleft amirite!
     </div>
+    
 </body>
 </html>
