--- a/index.html
+++ b/index.html
@@ -34,22 +34,31 @@
 
     <div class="middle">
         <h2 class="info-header">Cool Info About Things</h2>
-        <div class="img-holder"></div>
-        this is why we are oh so awesome and kewl and what you can look forward to with us.
-        <div class="img-holder"></div>
-        this is why we are oh so awesome and kewl and what you can look forward to with us.
-        <div class="img-holder"></div>
-        this is why we are oh so awesome and kewl and what you can look forward to with us.
-        <div class="img-holder"></div>
-        this is why we are oh so awesome and kewl and what you can look forward to with us.
-
+        <div class="middle-content">
+            <div class="middle-container">
+                <div class="img-holder"></div>
+                this is why we are oh so awesome and kewl and what you can look forward to with us.
+            </div>
+            <div class="middle-container">
+                <div class="img-holder"></div>
+                this is why we are oh so awesome and kewl and what you can look forward to with us.
+             </div>
+             <div class="middle-container"> 
+                <div class="img-holder"></div>
+                this is why we are oh so awesome and kewl and what you can look forward to with us.
+            </div>
+            <div class="middle-container">    
+                <div class="img-holder"></div>
+                this is why we are oh so awesome and kewl and what you can look forward to with us.
+             </div>   
+        </div>
     </div>
 
     <div class="bottom">
         <div class="quote">
             You should most definetly check this place out. Believe me when I say I can't wait to get back to this site again after every night. Sometimes I get too excited and can't actually sleep and spend all night thinking about the beauty of this site and what it has to offer.
         </div>
-        -Aurthor, Webber
+        <div class="speaker">-Aurthor, Webber</div>
     </div>
 
     <div class="call">
