Style quote, call, footer. Figure out proper padding next

--- a/index.html
+++ b/index.html
@@ -61,12 +61,17 @@
         <div class="speaker">-Aurthor, Webber</div>
     </div>
 
-    <div class="call">
-        <h2>C'mon!</h2>
-        Stop waisting all of your time already not doing things that will actually make you happy! Join us today!
-        <button>Signup</button>
+    <div class="call-container">
+        <div class="call">
+            <div class="call-left">
+                <h2>C'mon!</h2>
+                Stop waisting all of your time already not doing things that will actually make you happy! Join us today!
+            </div>
+            <div class="call-right">
+                <button class="call-button">Signup</button>
+            </div>
+        </div>
     </div>
-
     <div class="footer">
         Copyright? More like Copyleft amirite!
     </div>
